[gd_scene load_steps=2 format=3 uid="uid://settings_scene_uid"]

[ext_resource type="Script" path="res://settings.gd" id="1_settings_script"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_settings_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
mouse_filter = 2

[node name="AspectContainer" type="AspectRatioContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.77778
stretch_mode = 3
mouse_filter = 2

[node name="MainContainer" type="Control" parent="Background/AspectContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Background/AspectContainer/MainContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Background/AspectContainer/MainContainer/CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="UIScaleContainer" type="HBoxContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/UIScaleContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "UI Scale:"

[node name="UIScaleSlider" type="HSlider" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/UIScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.8
max_value = 1.2
step = 0.05
value = 1.0

[node name="UIScaleValueLabel" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/UIScaleContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0

[node name="MusicVolumeValueLabel" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"

[node name="SFXVolumeContainer" type="HBoxContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0

[node name="SFXVolumeValueLabel" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"

[node name="DevSpeedContainer" type="HBoxContainer" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DevSpeedContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Dev Speed Mode:"

[node name="DevSpeedCheckBox" type="CheckBox" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DevSpeedContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveResetButton" type="Button" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Save"

[node name="BackButton" type="Button" parent="Background/AspectContainer/MainContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
